# hiking_upward_recommender

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dev.Dockerfile  dev_requirements.txt  pyproject.toml
app/: build_model_make_predictions.py  streamlit_app.py
app/data/: hiking_upward_data.csv  nearest_15_recommendations_for_each_hike.csv
notebooks/: content-based-recommender.ipynb  get_hike_urls_and_data.ipynb  parse_duration_and_elev_vars.ipynb  test_cosine_similarity.ipynb  test_streamlit_df_merge.ipynb
