[tool.poetry]
name = "hiking_upward"
version = "0.1.0"
description = "\"\""
authors = ["\"Anna Vasylytsya\""]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.11"
pre-commit = "^2.16.0"
pandas = "^1.3.5"
numpy = "^1.20.3"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
streamlit = "^1.8.1"
turicreate = "^6.4.1"
pandera = "0.9.0"

[tool.poetry.dev-dependencies]
tqdm = "^4.63.0"
notebook = "^6.4.8"
jupyterlab = "^3.3.2"
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
